--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
+<ngx-spinner type="timer">Loading...</ngx-spinner>
+
+
 <app-nav></app-nav>
-
-
 
 <div class="container mt-3">
     <router-outlet></router-outlet>
