--- a/src/app/members/member-card/member-card.component.html
+++ b/src/app/members/member-card/member-card.component.html
@@ -28,6 +28,6 @@
             <i class="fas fa-user mr-2"></i>
             {{member.userName}}
         </h6>
-        <p class="card-text text-muted text-center">{{member.city}}</p>
+        <p class="card-text text-muted text-center">{{member.city || 'Aleppo'}} </p>
     </div>
 </div>
