--- a/src/app/members/member-detail/member-detail.component.html
+++ b/src/app/members/member-detail/member-detail.component.html
@@ -40,7 +40,7 @@
         <tab heading="About {{member.userName}}" id="tab1">
           <h4>Description:</h4>
           <p>{{member.introduction}}</p>
-          <h4>Looking For</h4>
+          <h4>Looking For:</h4>
           <p>{{member.lookingFor}}</p>
         </tab>
         <tab heading="Intersts">
