--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@
 }
 
 .nav-tabs >li.open, .member-tabset > .nav-tabs >li:hover{
-    border-bottom: 4px solid #fad842;
+    border-bottom: 4px solid #bbbbbb;
 }
 
 .member-tabset > .nav-tabs >li.open > a, .member-tabset > .nav-tabs >li:hover >a{
