--- a/src/app/members/member-card/member-card.component.scss
+++ b/src/app/members/member-card/member-card.component.scss
@@ -16,8 +16,11 @@
 
 .card-image-wrapper{
     overflow: hidden;
+    height: 200px;
 }
-
+.card-img-top{
+    height: 100%;
+}
 .member-icons {
     position: absolute;
     margin-right: 0;
