--- a/src/app/members/member-detail/member-detail.component.html
+++ b/src/app/members/member-detail/member-detail.component.html
@@ -27,8 +27,12 @@
             </div>
             <div class="card-footer">
                <div class="btn-group d-flex">
-                   <button type="button" class="btn btn-warning"> Like</button>
-                   <button type="button" class="btn btn-success"> Message</button>
+                   <button type="button" class="btn btn-warning">
+                     <i class="fas fa-thumbs-up"></i>
+                    Like</button>
+                   <button type="button" class="btn btn-success">
+                    <i class="fas fa-comment"></i>
+                    Message</button>
                </div>
             </div>
         </div>
