--- a/src/app/members/member-edit/member-edit.component.html
+++ b/src/app/members/member-edit/member-edit.component.html
@@ -86,7 +86,8 @@
               </tab>
           
         <tab heading="Edit Photos">
-          <p>edit photo</p>
+          <p>edit photo back soon</p>
+          <app-photo-editor [member]="member"></app-photo-editor>
           <!-- <ngx-gallery class="ngx-gallery"
           [options]="galleryOptions" 
           [images]="galleryImages">
