--- a/src/app/members/member-edit/member-edit.component.html
+++ b/src/app/members/member-edit/member-edit.component.html
@@ -13,7 +13,7 @@
 
     <div class="col-4">
         <div class="card">
-            <img class="card-img-top img-thumbnail" src="{{member.phoneUrl || '/assets/default.jpg'}}" alt="{{member.userName}}" />
+            <img class="card-img-top img-thumbnail" [src]="member.phoneUrl ==baseServicesURL? '/assets/default.jpg' :member.phoneUrl " alt="{{member.userName}}" />
             <div class="card-body">
                <div>
                  <strong>Location:</strong>
