--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -21,8 +21,9 @@
       
       <div class="dropdown"  *ngIf="(authServices.currentUser$ | async) as user">
 
-        <img [src]="user.photoUrl" class="img-fluid rounded-top imgProfile" [alt]="user.userName" />
-        
+        <!-- <img [src]="user.photoUrl" class="img-fluid rounded-top imgProfile" [alt]="user.userName" /> -->
+        <img [src]="user.photoUrl|| '/assets/default.jpg'" class="img-fluid rounded-top imgProfile" [alt]="user.userName" />
+
 
         <button class="btn text-white dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
           Welcom {{user.userName | uppercase}}
