--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<ngx-spinner type="timer">Loading...</ngx-spinner>
+<ngx-spinner type="ball-clip-rotate-multiple">Loading...</ngx-spinner>
 
 
 <app-nav></app-nav>
 
-<div class="container mt-3">
+<div class="container-fluid mt-3">
     <router-outlet></router-outlet>
 </div>
 
