--- a/src/app/members/member-card/member-card.component.html
+++ b/src/app/members/member-card/member-card.component.html
@@ -24,10 +24,11 @@
     </div>
 
     <div class="card-body">
-        <h6 class="card-title text-center md-1">
+        <h6 class="card-title  md-1">
             <i class="fas fa-user mr-2"></i>
-            {{member.userName}}
+            {{member.userName}} - {{member.age}} 
         </h6>
-        <p class="card-text text-muted text-center">{{member.city || 'Aleppo'}} </p>
+        <!-- <p class="card-text text-muted text-center"><i class="fa-solid fa-location-dot"></i> {{member.age}} </p> -->
+        <p class="card-text text-muted "><i class="fa-solid fa-location-dot"></i> {{member.city || 'Aleppo'}} </p>
     </div>
 </div>
