--- a/src/app/members/member-edit/member-edit.component.html
+++ b/src/app/members/member-edit/member-edit.component.html
@@ -13,8 +13,13 @@
 
     <div class="col-4">
         <div class="card">
-            <img class="card-img-top img-thumbnail" [src]="member.phoneUrl ==baseServicesURL? '/assets/default.jpg' :member.phoneUrl " alt="{{member.userName}}" />
+          <img 
+          class="card-img-top img-thumbnail" 
+          [src]="(member.phoneUrl === baseServicesURL || member.phoneUrl === null) ? '/assets/default.jpg' : member.phoneUrl" 
+          alt="{{ member.userName }}" 
+      />
             <div class="card-body">
+              
                <div>
                  <strong>Location:</strong>
                  <p>{{member.city}} - {{member.country}}</p>
@@ -27,12 +32,12 @@
 
               <div>
                 <strong>Member Last Active:</strong>
-                <p>{{member.lastActive}}</p>
+                <p>{{member.lastActive |timeago}}</p>
               </div>
 
               <div>
                 <strong>Member since:</strong>
-                <p>{{member.created}}</p>
+                <p>{{member.created | date :'dd MMM yyyy'}}</p>
               </div>
 
             </div>
@@ -52,6 +57,7 @@
             <tab heading="About {{member.knownAs}}" id="tab1">
               <form id="editForm" [formGroup]="editMemerForm" (ngSubmit)="onSubmit()">
 
+                
                   <h4>Description :</h4>
                   <div class="mb-3">
                       <textarea class="form-control" formControlName="introduction" rows="5">{{member.introduction}}</textarea>
