--- a/src/app/members/member-list/member-list.component.html
+++ b/src/app/members/member-list/member-list.component.html
@@ -1,5 +1,100 @@
-<div class="row">
-    <div class="col-2 mb-2" *ngFor="let item of member">
-        <app-member-card [member]="item"></app-member-card>
+<div class="row" style="margin: 2rem;">
+    
+    <div class="col-3" style="margin-left: 1rem;">
+        <div class="text-center mt-3">
+            <h5> Your Matches - <span class="text-danger"
+                style="font-weight: bold;font-size: 1em;">
+                {{pagination.TotalItems}}
+            </span> found</h5>
+            <hr>
+            <div class="text-start mt-3">
+                <form class="form-inline" #form="ngForm" (ngSubmit)="getMembers()" autocomplete="off">
+                  <div class="row">
+                    <div class="col-md-6">
+                        <div class="mb-3">
+                         <label for="" class="form-label"> Age Form :</label>
+                         <input type="number" name="minAge" id="" class="form-control ml-1"
+                         aria-describedby="helpId" [(ngModel)]="userParams.minAge">
+                        </div>
+                     </div>
+                     <div class="col-md-6">
+                         <div class="mb-3">
+                             <label for="" class="form-label"> Age To :</label>
+                             <input type="number" name="maxAge" id="" class="form-control ml-1"
+                             aria-describedby="helpId" [(ngModel)]="userParams.maxAge">
+                            </div>
+                     </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-12">
+                        <div class="mb-3">
+                            <label for="" class="form-label"> Shows :</label>
+                            <select name="gender" [(ngModel)]="userParams.gender" class="form-select ml-1">
+                                
+                                <option *ngFor="let item of genderList" [value]="item.key">{{item.value}}</option>
+                            </select>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-6">
+                        <button type="submit" class="btn btn-block btn-outline-warning">
+                            <i class="fas fa-magnifying-glass mx-2"></i>
+                            Filter
+                        </button>
+                    </div>
+
+                    <div class="col-6 text-end">
+                        <button type="submit" class="btn btn-block btn-outline-info"
+                        (click)="resetFilter()">
+                            <i class="fas fa-rotate mx-2"></i>
+                            Reset
+                        </button>
+                    </div>
+                 
+                  </div>
+                  <div class="row" >
+                    <div class="col" style="margin-top: 170px;">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-warning" name="orderBy"
+                              btnRadio="lastActive" [(ngModel)]="userParams.orderBy"
+                             (click)="getMembers()"
+                              >Last Active</button>
+
+                            <div class="btn-group float-left">
+                                <button type="button" class="btn btn-secondary" name="orderBy"
+                                  btnRadio="created" [(ngModel)]="userParams.orderBy"
+                                  (click)="getMembers()"
+                                >New Members</button>
+                            </div>
+                        </div>
+                    </div>
+                  </div>
+                </form>
+                
+            </div>
+        </div>
+    </div>
+    <div class="col-8">
+        <div class="row">
+            <div class="col-3 mb-2 cCard" *ngFor="let item of member">
+                <app-member-card [member]="item"></app-member-card>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center" *ngIf="pagination">
+            <pagination 
+                [boundaryLinks]="true" 
+                [totalItems]="pagination.TotalItems"
+                [itemsPerPage]="pagination.ItemsPerPage"
+                [(ngModel)]="pageNumber"
+                (pageChanged)="pageChanged($event)"
+                previousText="&lsaquo;" 
+                nextText="&rsaquo;" 
+                firstText="&laquo;" 
+                lastText="&raquo;">
+            </pagination>
+        </div>
+        
     </div>
 </div>
