--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -1,1 +1,44 @@
-<p>lists works!</p>
+<div class="text-center mt-3">
+    <h2>{{Pridicate==='liked' ? 'Members I like' :'Members who like me'}}</h2>
+</div>
+
+<div class="container mt-3">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="btn-group" name="predicate">
+                <button class="btn btn-warning" btnRadio="liked"
+                [(ngModel)]="Pridicate" (click)="loadLikes()">
+                  Members I like
+                </button>
+                <button class="btn btn-warning" btnRadio="likedBy"
+                [(ngModel)]="Pridicate" (click)="loadLikes()">
+                Members who like me
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mt-3">
+        <div class="col-2" *ngFor="let item of member">
+
+            <app-member-card [member]="item"></app-member-card>
+        </div>
+        
+
+    </div>
+</div>
+
+
+<div class="d-flex justify-content-center" *ngIf="pagination">
+    <pagination 
+        [boundaryLinks]="true" 
+        [totalItems]="pagination.TotalItems"
+        [itemsPerPage]="pagination.ItemsPerPage"
+        [(ngModel)]="pageNumber"
+        (pageChanged)="pageChanged($event)"
+        previousText="&lsaquo;" 
+        nextText="&rsaquo;" 
+        firstText="&laquo;" 
+        lastText="&raquo;">
+    </pagination>
+</div>
