--- a/src/app/members/member-detail/member-detail.component.html
+++ b/src/app/members/member-detail/member-detail.component.html
@@ -2,11 +2,11 @@
 <div class="row" *ngIf="member">
     <div class="col-4">
         <div class="card">
-            <img class="card-img-top img-thumbnail"[src]="(member.phoneUrl === baseServicesURL || member.phoneUrl === null) ? '/assets/default.jpg' : member.phoneUrl"  alt="{{member.userName}}" />
+            <img class="card-img-top img-thumbnail"[src]="(member.phonoUrl === baseServicesURL || member.phonoUrl === null) ? '/assets/default.jpg' : member.phoneUrl"  alt="{{member.userName}}" />
             <div class="card-body">
                <div>
                  <strong>Location:</strong>
-                 <p>{{member.city}} - {{member.country}}</p>
+                 <p> {{member.country}} -{{member.city}}</p>
                </div>
 
                <div>
