--- a/src/app/members/member-card/member-card.component.html
+++ b/src/app/members/member-card/member-card.component.html
@@ -14,7 +14,8 @@
                 </button>   
             </li>
             <li class="list-inline-item">
-                <button type="button" class="btn btn-warning">
+                <button type="button"
+                routerLink="/member/{{member.userName}}"  [queryParams]="{tab:3}" class="btn btn-warning">
                     <i class="fas fa-envelope"></i>
                 </button>   
             </li>
