--- a/src/app/members/member-detail/member-detail.component.html
+++ b/src/app/members/member-detail/member-detail.component.html
@@ -1,8 +1,8 @@
 
-<div class="row" *ngIf="member">
+<div class="row" >
     <div class="col-4">
         <div class="card">
-            <img class="card-img-top img-thumbnail"[src]="(member.phonoUrl === baseServicesURL || member.phonoUrl === null) ? '/assets/default.jpg' : member.phoneUrl"  alt="{{member.userName}}" />
+            <img class="card-img-top img-thumbnail"[src]="(member.photoUrl === baseServicesURL || member.photoUrl === null) ? '/assets/default.jpg' : member.photoUrl"  alt="{{member.userName}}" />
             <div class="card-body">
                <div>
                  <strong>Location:</strong>
@@ -30,7 +30,7 @@
                    <button type="button" class="btn btn-warning">
                      <i class="fas fa-thumbs-up"></i>
                     Like</button>
-                   <button type="button" class="btn btn-success">
+                   <button (click)="slectTab(3)" type="button" class="btn btn-success">
                     <i class="fas fa-comment"></i>
                     Message</button>
                </div>
@@ -40,19 +40,19 @@
     </div>
 
     <div class="col-8">
-      <tabset class="member-tabset">
-         <tab  heading="About {{member.userName}}" id="tab1">
+      <tabset class="member-tabset" #memberTabs>
+         <tab  heading="About {{member.userName}}" (selectTab)="noTabActivator($event)" >
           <h4>Description:</h4>
           <p>{{member.introduction}}</p>
           <h4>Looking For:</h4>
           <p>{{member.lookingFor}}</p>
         </tab>
-        <tab heading="Intersts">
+        <tab heading="Intersts" (selectTab)="noTabActivator($event)" >
           <h4>Intersts:</h4>
           <p>{{member.interests}}</p>
           
         </tab>
-        <tab heading="Photos">
+        <tab heading="Photos" >
           
           <ngx-gallery class="ngx-gallery"
           [options]="galleryOptions" 
@@ -60,8 +60,9 @@
         </ngx-gallery>
         </tab>
 
-        <tab heading="Messages">
-          <p>Messages here</p>
+        <tab heading="Messages" (selectTab)="noTabActivator($event)" >
+          
+          <app-membar-messages [message]="message" [userName]="member.userName"></app-membar-messages>
         </tab>
       </tabset>
     </div>
