--- a/src/app/members/member-edit/member-edit.component.html
+++ b/src/app/members/member-edit/member-edit.component.html
@@ -15,7 +15,7 @@
         <div class="card">
           <img 
           class="card-img-top img-thumbnail" 
-          [src]="(member.phonoUrl === baseServicesURL || member.phonoUrl === null) ? '/assets/default.jpg' : member.phoneUrl" 
+          [src]="(member.photoUrl === baseServicesURL || member.photoUrl === null) ? '/assets/default.jpg' : member.photoUrl" 
           alt="{{ member.userName }}" 
       />
             <div class="card-body">
