--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,1 +1,83 @@
-<p>messages works!</p>
+<div class="row mb-4">
+    <div class="col-6">
+        <div class="btn-group" name="container">
+            <button class="btn btn-warning" btnRadio="unRead" [(ngModel)]="container" (click)="loadMessage()">
+                <i class="fa fa-envelope"></i>
+                Unread
+            </button>
+            <button class="btn btn-warning" btnRadio="Inbox" [(ngModel)]="container" (click)="loadMessage()">
+                <i class="fa fa-envelope-open"></i>
+                Inbox
+            </button>
+            <button class="btn btn-warning" btnRadio="Outbox" [(ngModel)]="container" (click)="loadMessage()">
+                <i class="fa fa-paper-plane"></i>
+                Outbox
+            </button>
+        </div>
+    </div>
+</div>
+
+<!-- عرض في حالة عدم وجود رسائل -->
+<div class="row text-center" *ngIf="message?.length === 0">
+    <h3>No messages</h3>
+</div>
+
+<!-- عرض الرسائل في جدول -->
+<div class="row text-center" *ngIf="message?.length > 0">
+    <table class="table table-hover " style="cursor: pointer;">
+        <tr>
+            <th style="width: 40%;">Message</th>
+            <th style="width: 20%;">From / To</th>
+            <th style="width: 20%;">Sent / Received</th>
+            <th style="width: 20%;">Action</th>
+        </tr>
+        <tr *ngFor="let message of message" routerLink='{{container==="Outbox" ? 
+                                                        "/member/"+message.recipientUserName
+                                                        :"/member/" +message.senderUserName}}'
+                                                         [queryParams]="{tab:3}">
+            <td >{{ message.content }}</td>
+            <td style=" text-align: start;">
+                <!-- عرض الصورة والمستخدم المستلم إذا كان في صندوق الصادر -->
+                <div *ngIf="container === 'Outbox'">
+                    <img src="./assets/loading.webp" class="img-circle rounded-circle mx-2" [hidden]="!loading" >
+                    <img [hidden]="loading" class="img-circle rounded-circle mx-2 "
+                         src="{{ message.recipientProfileUrl || './assets/default.jpg' }}"
+                         alt="{{ message.recipientUserName }}">
+                    <strong [hidden]="loading" >{{ message.recipientUserName | titlecase }}</strong>
+                </div>
+
+                <!-- عرض الصورة والمستخدم المرسل في باقي الحالات -->
+                <div *ngIf="container !== 'Outbox'">
+                    <img src="./assets/loading.webp" class="img-circle rounded-circle mx-2" [hidden]="!loading" >
+                    <img [hidden]="loading" class="img-circle rounded-circle mx-2"
+                         src="{{ message.senderProfileUrl || './assets/default.jpg' }}"
+                         alt="{{ message.senderUserName }}">
+                    <strong [hidden]="loading" >{{ message.senderUserName | titlecase }}</strong>
+                </div>
+            </td>
+            <td>
+                {{ message.messageSend | timeago }}
+            </td>
+            <td>
+                <button (click)="$event.stopPropagation()" (click)="deleteMessage(message.id)" class="btn btn-danger">
+                    <i class="fa-solid fa-trash-can"></i>
+                    Delete</button>
+            </td>
+        </tr>
+    </table>
+</div>
+
+<!-- التحكم في التصفح -->
+<div class="d-flex justify-content-center" *ngIf="pagination ">
+    <pagination 
+        [boundaryLinks]="true" 
+        [totalItems]="pagination.TotalItems"
+        [itemsPerPage]="pagination.ItemsPerPage"
+        [(ngModel)]="pageNumber"
+        (pageChanged)="pageChanged($event)"
+        previousText="&lsaquo;" 
+        nextText="&rsaquo;" 
+        firstText="&laquo;" 
+        lastText="&raquo;">
+    </pagination>
+</div>
