--- a/src/app/members/member-detail/member-detail.component.html
+++ b/src/app/members/member-detail/member-detail.component.html
@@ -4,6 +4,9 @@
         <div class="card">
             <img class="card-img-top img-thumbnail"[src]="(member.photoUrl === baseServicesURL || member.photoUrl === null) ? '/assets/default.jpg' : member.photoUrl"  alt="{{member.userName}}" />
             <div class="card-body">
+              <span *ngIf="(presence.onlineUsers$ |async).includes(member.userName)">
+                <i class="fas fa-circle-dot mx-1 text-success"></i> online now
+            </span>
                <div>
                  <strong>Location:</strong>
                  <p> {{member.country}} -{{member.city}}</p>
@@ -62,7 +65,7 @@
 
         <tab heading="Messages" (selectTab)="noTabActivator($event)" >
           
-          <app-membar-messages [message]="message" [userName]="member.userName"></app-membar-messages>
+          <app-membar-messages  [userName]="member.userName"></app-membar-messages>
         </tab>
       </tabset>
     </div>
