--- a/src/app/members/membar-messages/membar-messages.component.html
+++ b/src/app/members/membar-messages/membar-messages.component.html
@@ -1,10 +1,10 @@
 <div class="card">
     <div class="card-body">
-        <div *ngIf="message?.length===0">
+        <div *ngIf="(messageServices.messageRead$ |async)?.length===0">
             No message yet... say hi by using the message box below
         </div>
-        <ul *ngIf="message?.length>0"  class="chat">
-            <li *ngFor="let message of message">
+        <ul *ngIf="(messageServices.messageRead$ |async)?.length>0"  class="chat">
+            <li *ngFor="let message of (messageServices.messageRead$ |async)">
                 <div>
                 <span class="chat-img float-right" style="float: right;">
                     <img class="rounded-circle"
