--- a/src/app/members/member-card/member-card.component.scss
+++ b/src/app/members/member-card/member-card.component.scss
@@ -1,5 +1,3 @@
-
-
 .card:hover img{
  transform: scale(1.2,1.2);
  transition-duration: 400ms;
@@ -11,11 +9,6 @@
     transition-duration: 400ms;
     transition-timing-function: ease-out;
 }
-
-
-
-
-
 .card-image-wrapper{
     overflow: hidden;
     height: 200px;
@@ -32,12 +25,18 @@
     bottom: 0%;
     opacity: 0;
     transition: all 0.5s ease-in-out;
-
 }
-
 .card-image-wrapper:hover .member-icons {
     opacity: 1;
     bottom: 30%;
 }
 
+@keyframes fa-blink{
+    0%{opacity: 1;}
+    100%{opacity: 0.4;}
+}
+.is-online{
+    animation: fa-blink 1.5s linear infinite;
+    color: rgb(1,150,1);
+}
 
